#10 change quots in files

--- a/src/blocks/additions/additions.pug
+++ b/src/blocks/additions/additions.pug
@@ -1,6 +1,6 @@
 mixin additions({noBorder, title, desc, icon})
   if noBorder
-    - let noBorderClass = 'additions--no-border'
+    - let noBorderClass = "additions--no-border"
   .additions(class=noBorderClass)
     .additions__title= title
     div= desc
