--- a/src/blocks/additions/additions.scss
+++ b/src/blocks/additions/additions.scss
@@ -1,4 +1,4 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
 
 .additions {
   position: relative;
@@ -21,7 +21,7 @@
     position: absolute;
     top: 0.1em;
     left: 0;
-    font-family: "Material Icons";
+    font-family: 'Material Icons';
     font-size: 3.43em;
     line-height: 0.85em;
     background: $gradient;
