--- a/src/blocks/enter-card/enter-card.pug
+++ b/src/blocks/enter-card/enter-card.pug
@@ -9,6 +9,6 @@ mixin enter-card()
         input.text-field.enter-card__field(type="text" placeholder="Email")
         input.text-field(type="password" placeholder="Пароль")
         .enter-card__enter-button
-          +long-button('Войти')
+          +long-button("Войти")
       .enter-card__footer
-        +card-footer('Нет аккаунта на Toxin?', 'Создать')
+        +card-footer("Нет аккаунта на Toxin?", "Создать")
