--- a/src/blocks/hero-galery/hero-galery.pug
+++ b/src/blocks/hero-galery/hero-galery.pug
@@ -1,5 +1,5 @@
 mixin hero-galery(images)
   .hero-galery
-    img(src=images[0] class='hero-galery__main-image', alt="main image")
-    img(src=images[1] class='hero-galery__other-image', alt="other image")
-    img(src=images[2] class='hero-galery__other-image', alt="other image")
+    img(src=images[0] class="hero-galery__main-image", alt="main image")
+    img(src=images[1] class="hero-galery__other-image", alt="other image")
+    img(src=images[2] class="hero-galery__other-image", alt="other image")
