--- a/src/blocks/hero/hero.pug
+++ b/src/blocks/hero/hero.pug
@@ -1,6 +1,8 @@
 mixin hero({theme, text})
-  -var classes = ['hero']
-  if theme == 'secondary'
-    - classes.push('hero--img2')
+  - let classes = ["hero"]
+
+  if theme == "secondary"
+    classes.push("hero--img2")
+
   div(class=classes) 
     .hero__text= text
