--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -1,15 +1,15 @@
-@import "../../scss/sizes.scss";
+@import '../../scss/sizes.scss';
 
 .hero {
   position: relative;
-  background-image: url("../img/image_3.png");
+  background-image: url('../img/image_3.png');
   min-height: 702px;
   background-repeat: no-repeat;
   background-position-x: center;
   //background-position-y: -70px;
 
   &--img2 {
-    background-image: url("../img/image_4.png");
+    background-image: url('../img/image_4.png');
   }
 
   &__text {
