--- a/src/blocks/long-button/long-button.scss
+++ b/src/blocks/long-button/long-button.scss
@@ -1,4 +1,4 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
 
 .long-button {
   position: relative;
@@ -23,7 +23,7 @@
     position: absolute;
     top: 18px;
     right: 10px;
-    font-family: "Material Icons";
+    font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
     font-size: 1.5rem;
