--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -1,5 +1,5 @@
-@import "../../../node_modules/ion-rangeslider/css/ion.rangeslider.css";
-@import "../../scss/colors.scss";
+@import '../../../node_modules/ion-rangeslider/css/ion.rangeslider.css';
+@import '../../scss/colors.scss';
 
 .irs--flat .irs-min,
 .irs--flat .irs-max {
