--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -26,21 +26,21 @@ html
           .js-calendar
         .cards__item
           +image-card({
-            image: '../img/apartments_1.png',
+            image: "../img/apartments_1.png",
             arrows: true,
             position: 888,
             lux: true,
-            price: '9 990',
+            price: "9 990",
             rating: 5,
             comments: 145
           })
         .cards__item
           +image-card({
-            image: '../img/apartments_2.png',
+            image: "../img/apartments_2.png",
             arrows: false,
             position: 840,
             lux: false,
-            price: '9 990',
+            price: "9 990",
             rating: 4,
             comments: 65
           })
