--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -23,53 +23,53 @@ html
       +header({
       isLogged: false, 
       buttons: {
-        enter: 'Войти',
-        register: 'Зарегистрироваться'
+        enter: "Войти",
+        register: "Зарегистрироваться"
       },
       menu: [
         {
-        text: 'О нас',
-        link: '#about_us',
-        classes: ['menu__item']
+        text: "О нас",
+        link: "#about_us",
+        classes: ["menu__item"]
         }, 
         {
-        text: 'Услуги',
-        classes: ['menu__item', 'menu__submenu', 'js-menu__submenu'],
+        text: "Услуги",
+        classes: ["menu__item", "menu__submenu", "js-menu__submenu"],
         link: [
         {
-          text: 'First',
-          link: '#first',
-          classes: ['submenu__item']
+          text: "First",
+          link: "#first",
+          classes: ["submenu__item"]
         },
         {
-          text: 'Second',
-          link: '#second',
-          classes: ['submenu__item']
+          text: "Second",
+          link: "#second",
+          classes: ["submenu__item"]
         }
         ]},
         {
-        text: 'Вакансии',
-        link: '#careers',
-        classes: ['menu__item']
+        text: "Вакансии",
+        link: "#careers",
+        classes: ["menu__item"]
         },
         {
-        text: 'Новости',
-        link: '#news',
-        classes: ['menu__item']
+        text: "Новости",
+        link: "#news",
+        classes: ["menu__item"]
         },
         {
-        text: 'Соглашения',
-        classes: ['menu__item', 'menu__submenu', 'js-menu__submenu'],
+        text: "Соглашения",
+        classes: ["menu__item", "menu__submenu", "js-menu__submenu"],
         link: [
           {
-          text: 'First',
-          link: '#first',
-          classes: ['submenu__item']
+          text: "First",
+          link: "#first",
+          classes: ["submenu__item"]
           },
           {
-          text: 'Second',
-          link: '#second',
-          classes: ['submenu__item']
+          text: "Second",
+          link: "#second",
+          classes: ["submenu__item"]
           }
         ]
         }
@@ -81,39 +81,39 @@ html
     block footer
       .main-layout__footer
         +footer({
-          main: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»',
+          main: "Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»",
           navigation: [
             {
-              title: 'Навигация',
+              title: "Навигация",
               links: [
-                { url: 'index.html', text: 'О нас' },
-                { url: 'index.html', text: 'Новости' },
-                { url: 'index.html', text: 'Служба поддержки' },
-                { url: 'index.html', text: 'Услуги' },
+                { url: "index.html", text: "О нас" },
+                { url: "index.html", text: "Новости" },
+                { url: "index.html", text: "Служба поддержки" },
+                { url: "index.html", text: "Услуги" },
               ]
             },
             {
-              title: 'О нас',
+              title: "О нас",
               links: [
-                { url: 'index.html', text: 'О сервисе' },
-                { url: 'index.html', text: 'Наша команда' },
-                { url: 'index.html', text: 'Вакансии' },
-                { url: 'index.html', text: 'Инвесторы' },
+                { url: "index.html", text: "О сервисе" },
+                { url: "index.html", text: "Наша команда" },
+                { url: "index.html", text: "Вакансии" },
+                { url: "index.html", text: "Инвесторы" },
               ]
             },
             {
-              title: 'Служба поддержки',
+              title: "Служба поддержки",
               links: [
-                { url: 'index.html', text: 'Соглашения' },
-                { url: 'index.html', text: 'Сообщества' },
-                { url: 'index.html', text: 'Связь с нами' },
+                { url: "index.html", text: "Соглашения" },
+                { url: "index.html", text: "Сообщества" },
+                { url: "index.html", text: "Связь с нами" },
               ]
             },
           ],
-          copy: 'Copyright © 2018 Toxin отель. Все права зачищены.',
+          copy: "Copyright © 2018 Toxin отель. Все права зачищены.",
           subscription: {
-            title: 'Подписка',
-            text: 'Получайте специальные предложения и новости сервиса',
-            placeholder: 'Email'
+            title: "Подписка",
+            text: "Получайте специальные предложения и новости сервиса",
+            placeholder: "Email"
           }
         })
