--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -7,7 +7,7 @@ block title
   title Registration
 
 block hero
-  +hero({text: '', theme: 'secondary'})
+  +hero({text: "", theme: "secondary"})
 
 block card 
   .registration
