--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -1,14 +1,13 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
+@import '../../../node_modules/air-datepicker/src/sass/datepicker.scss';
+@import '../../../node_modules/air-datepicker/src/sass/navigation.scss';
+@import '../../../node_modules/air-datepicker/src/sass/cell.scss';
 
 .calendar {
   position: absolute;
   top: 40px;
   visibility: hidden;
 }
-
-@import "../../../node_modules/air-datepicker/src/sass/datepicker.scss";
-@import "../../../node_modules/air-datepicker/src/sass/navigation.scss";
-@import "../../../node_modules/air-datepicker/src/sass/cell.scss";
 
 .datepicker {
   font-family: Montserrat, Arial, sans-serif;
@@ -74,7 +73,7 @@
 
     &::after {
       position: absolute;
-      content: "";
+      content: '';
       width: 20px;
       height: 40px;
       background-image: $gradient-25;
@@ -87,7 +86,7 @@
 
     &::before {
       position: absolute;
-      content: "";
+      content: '';
       width: 20px;
       height: 40px;
       background-image: $gradient-25;
