--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -1,4 +1,4 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
 
 .checkbox {
   display: block;
@@ -38,7 +38,7 @@
   }
 
   &__mark:after {
-    content: "";
+    content: '';
     display: none;
     position: absolute;
     top: 0.36em;
