--- a/src/blocks/expander/expander.scss
+++ b/src/blocks/expander/expander.scss
@@ -1,4 +1,4 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
 
 .expander {
   &__header {
@@ -12,7 +12,7 @@
     user-select: none;
 
     &::after {
-      content: "";
+      content: '';
       display: inline-block;
       position: relative;
       top: -3px;
