--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,6 +1,6 @@
 include ../menu/menu
 
-mixin header({isLogged, buttons: {enter = '', register = ''} = {}, menu})
+mixin header({isLogged, buttons: {enter = "", register = ""} = {}, menu})
   header.header
     .header__container
       .site-logo.header__logo
