--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,5 +1,5 @@
-@import "../../scss/colors.scss";
-@import "../../scss/sizes.scss";
+@import '../../scss/colors.scss';
+@import '../../scss/sizes.scss';
 
 .header {
   width: 100%;
