--- a/src/blocks/icon-button/icon-button.scss
+++ b/src/blocks/icon-button/icon-button.scss
@@ -4,11 +4,10 @@
   background: none;
   border: none;
   cursor: pointer;
-  //padding: 0;
   font-size: 42px;
   line-height: 42px;
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-  font-family: "Material Icons";
+  font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
   -webkit-background-clip: text;
