--- a/src/blocks/menu-toggle/menu-toggle.scss
+++ b/src/blocks/menu-toggle/menu-toggle.scss
@@ -1,4 +1,4 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
 
 .menu-toggle {
   border: none;
@@ -7,7 +7,7 @@
   cursor: pointer;
 
   &:after {
-    content: "\2261";
+    content: '\2261';
     color: $dark-shade-50;
     display: block;
     font-size: 2.5rem;
