--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -1,4 +1,4 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
 
 .pagination {
   font-size: 0.75rem;
@@ -37,8 +37,8 @@
     cursor: pointer;
 
     &::after {
-      content: "\e5c8";
-      font-family: "Material Icons";
+      content: '\e5c8';
+      font-family: 'Material Icons';
       color: $white;
       font-size: 1.5rem;
     }
