--- a/src/blocks/site-logo/site-logo.scss
+++ b/src/blocks/site-logo/site-logo.scss
@@ -1,5 +1,5 @@
 .site-logo {
-  background-image: url("../img/logo-toxin.png");
+  background-image: url('../img/logo-toxin.png');
   background-repeat: no-repeat;
   width: 106px;
   height: 40px;
