--- a/src/blocks/toggle/toggle.scss
+++ b/src/blocks/toggle/toggle.scss
@@ -1,4 +1,4 @@
-@import "../../scss/colors.scss";
+@import '../../scss/colors.scss';
 
 .toggle {
   padding-left: 3.6em;
@@ -26,7 +26,7 @@
   &__mark:after {
     display: block;
     position: absolute;
-    content: "";
+    content: '';
     width: 12px;
     height: 12px;
     top: 3px;
