--- a/src/pages/landing-layout/landing-layout.pug
+++ b/src/pages/landing-layout/landing-layout.pug
@@ -7,7 +7,7 @@ block title
 
 block content
   block hero
-    +hero({text: 'Лучшие номера для вашей работы, отдыха и просто вдохновения'})
+    +hero({text: "Лучшие номера для вашей работы, отдыха и просто вдохновения"})
 
   block card
     .landing-layout
