--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -7,7 +7,7 @@ block title
   title Sign In
 
 block hero
-  +hero({text: '', theme: 'secondary'})
+  +hero({text: "", theme: "secondary"})
 
 block card
   .sign-in
