--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,5 +1,5 @@
-@import "colors.scss";
-@import "fonts.scss";
+@import 'colors.scss';
+@import 'fonts.scss';
 
 :root {
   box-sizing: border-box;
@@ -13,7 +13,7 @@
 
 body {
   color: rgba(31, 32, 65, 0.75);
-  font-family: "Montserrat", Arial, sans-serif;
+  font-family: Montserrat, Arial, sans-serif;
   margin-top: 3em;
   font-size: 0.875rem;
   line-height: 1.5rem;
@@ -58,7 +58,7 @@ h3 {
 }
 
 .material-icons {
-  font-family: "Material Icons";
+  font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
   display: inline-block;
